Cleaned code from request_id request.analysis is required anymore
